--- a/Zopa.ServiceDiagnostics.Tests/packages.config
+++ b/Zopa.ServiceDiagnostics.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net451" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net451" developmentDependency="true" />
   <package id="Moq" version="4.5.29" targetFramework="net451" />
   <package id="NUnit" version="3.5.0" targetFramework="net451" />
 </packages>
