Adding nuget generation support

--- a/Zopa.ServiceDiagnostics/Zopa.ServiceDiagnostics.csproj
+++ b/Zopa.ServiceDiagnostics/Zopa.ServiceDiagnostics.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Zopa.ServiceDiagnostics.csproj.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
