--- a/Zopa.ServiceDiagnostics.Tests/Zopa.ServiceDiagnostics.Tests.csproj
+++ b/Zopa.ServiceDiagnostics.Tests/Zopa.ServiceDiagnostics.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFrameworks>netcoreapp1.1;netcoreapp2.0</TargetFrameworks>
     <Authors>Jon Bates, Luke Smith</Authors>
     <Company>Zopa UK</Company>
     <PackageLicenseUrl>https://github.com/zopaUK/Zopa.ServiceDiagnostics/blob/master/LICENSE</PackageLicenseUrl>
